@@ -19,6 +19,10 @@
  */
 package org.olat.instantMessaging.manager;
 
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.OutputStream;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Date;
@@ -26,6 +30,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 
@@ -35,10 +40,15 @@ import org.olat.basesecurity.IdentityShort;
 import org.olat.core.commons.persistence.DB;
 import org.olat.core.id.Identity;
 import org.olat.core.id.OLATResourceable;
-import org.olat.core.manager.BasicManager;
+import org.olat.core.logging.OLog;
+import org.olat.core.logging.Tracing;
+import org.olat.core.util.Formatter;
 import org.olat.core.util.StringHelper;
 import org.olat.core.util.coordinate.CoordinatorManager;
 import org.olat.core.util.event.GenericEventListener;
+import org.olat.core.util.openxml.OpenXMLWorkbook;
+import org.olat.core.util.openxml.OpenXMLWorksheet;
+import org.olat.core.util.openxml.OpenXMLWorksheet.Row;
 import org.olat.core.util.resource.OresHelper;
 import org.olat.core.util.session.UserSessionManager;
 import org.olat.group.BusinessGroup;
@@ -57,7 +67,10 @@ import org.olat.instantMessaging.model.BuddyStats;
 import org.olat.instantMessaging.model.InstantMessageImpl;
 import org.olat.instantMessaging.model.Presence;
 import org.olat.instantMessaging.model.RosterEntryView;
+import org.olat.user.UserDataDeletable;
+import org.olat.user.UserDataExportable;
 import org.olat.user.UserManager;
+import org.olat.user.manager.ManifestBuilder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -68,7 +81,9 @@ import org.springframework.stereotype.Service;
  *
  */
 @Service
-public class InstantMessagingServiceImpl extends BasicManager implements InstantMessagingService, DeletableGroupData {
+public class InstantMessagingServiceImpl implements InstantMessagingService, DeletableGroupData, UserDataDeletable, UserDataExportable {
+	
+	private static final OLog log = Tracing.createLoggerFor(InstantMessagingServiceImpl.class);
 	
 	@Autowired
 	private RosterDAO rosterDao;
@@ -95,6 +110,42 @@ public class InstantMessagingServiceImpl extends BasicManager implements Instant
 		imDao.deleteMessages(group);
 		dbInstance.commit();
 		return true;
+	}
+
+	@Override
+	public void deleteUserData(Identity identity, String newDeletedUserName) {
+		imDao.deleteMessages(identity);
+		rosterDao.deleteEntry(identity);
+		prefsDao.deletePreferences(identity);
+	}
+	
+	@Override
+	public String getExporterID() {
+		return "chat";
+	}
+
+	@Override
+	public void export(Identity identity, ManifestBuilder manifest, File archiveDirectory, Locale locale) {
+		File chatArchive = new File(archiveDirectory, "Chat.xlsx");
+		try(OutputStream out = new FileOutputStream(chatArchive);
+			OpenXMLWorkbook workbook = new OpenXMLWorkbook(out, 1)) {
+			OpenXMLWorksheet sheet = workbook.nextWorksheet();
+			
+			Row header = sheet.newRow();
+			header.addCell(0, "Created");
+			header.addCell(1, "Message");
+			
+			List<InstantMessage> messages = imDao.loadMessageBy(identity);
+			dbInstance.commitAndCloseSession();
+			for (InstantMessage message : messages) {
+				Row row = sheet.newRow();
+				row.addCell(0, message.getCreationDate(), workbook.getStyles().getDateTimeStyle());
+				row.addCell(1, Formatter.truncate(message.getBody(), 32000));
+			}
+		} catch (IOException e) {
+			log.error("Unable to export xlsx", e);
+		}
+		manifest.appendFile(chatArchive.getName());
 	}
 
 	@Override
@@ -130,7 +181,7 @@ public class InstantMessagingServiceImpl extends BasicManager implements Instant
 			resName = identityKey1 + "-" + identityKey2;
 		}
 		long key = identityKey1.longValue() + identityKey2.longValue();
-		return OresHelper.createOLATResourceableInstance(resName, new Long(key));
+		return OresHelper.createOLATResourceableInstance(resName, Long.valueOf(key));
 	}
 
 	@Override
@@ -238,7 +289,7 @@ public class InstantMessagingServiceImpl extends BasicManager implements Instant
 		//count all my buddies
 		Collection<Long> buddiesColl = contactDao.getDistinctGroupOwnersParticipants(me);
 		buddiesColl.remove(me.getKey());
-		List<Long> buddies = new ArrayList<Long>(buddiesColl);
+		List<Long> buddies = new ArrayList<>(buddiesColl);
 		stats.setOfflineBuddies(buddies.size());
 
 		//filter online users
@@ -263,9 +314,9 @@ public class InstantMessagingServiceImpl extends BasicManager implements Instant
 
 	@Override
 	public List<BuddyGroup> getBuddyGroups(Identity me, boolean offlineUsers) {
-		List<BuddyGroup> groups = new ArrayList<BuddyGroup>(25);
-		Map<Long,BuddyGroup> groupMap = new HashMap<Long,BuddyGroup>();
-		Map<Long, String> identityKeyToStatus = new HashMap<Long, String>();
+		List<BuddyGroup> groups = new ArrayList<>(25);
+		Map<Long,BuddyGroup> groupMap = new HashMap<>();
+		Map<Long, String> identityKeyToStatus = new HashMap<>();
 		List<ContactViewExtended> contactList = contactDao.getContactWithExtendedInfos(me);
 		collectMembersStatus(contactList, identityKeyToStatus);
 		for(ContactViewExtended contact:contactList) {
@@ -275,7 +326,7 @@ public class InstantMessagingServiceImpl extends BasicManager implements Instant
 	}
 	
 	private void collectMembersStatus(List<? extends BusinessGroupMemberView> members, Map<Long, String> identityKeyToStatus) {
-		Set<Long> loadStatus = new HashSet<Long>();
+		Set<Long> loadStatus = new HashSet<>();
 		for(BusinessGroupMemberView member:members) {
 			Long identityKey = member.getIdentityKey();
 			if(!identityKeyToStatus.containsKey(identityKey) && !loadStatus.contains(identityKey)) {
@@ -288,8 +339,8 @@ public class InstantMessagingServiceImpl extends BasicManager implements Instant
 			}
 		}
 		
-		if(loadStatus.size() > 0) {
-			List<Long> statusToLoadList = new ArrayList<Long>(loadStatus);
+		if(!loadStatus.isEmpty()) {
+			List<Long> statusToLoadList = new ArrayList<>(loadStatus);
 			Map<Long,String> statusMap = prefsDao.getBuddyStatus(statusToLoadList);
 			for(Long toLoad:statusToLoadList) {
 				String status = statusMap.get(toLoad);
@@ -337,7 +388,7 @@ public class InstantMessagingServiceImpl extends BasicManager implements Instant
 	@Override
 	public List<Buddy> getBuddiesListenTo(OLATResourceable chatResource) {
 		List<RosterEntryView> roster = rosterDao.getRosterView(chatResource, 0, -1);
-		List<Buddy> buddies = new ArrayList<Buddy>();
+		List<Buddy> buddies = new ArrayList<>();
 		if(roster != null) {
 			for(RosterEntryView entry:roster) {
 				String name = entry.isAnonym() ? entry.getNickName() : entry.getFullName();
